--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,6 +9,8 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      PUB_CACHE: ~/.pub-cache
 
     steps:
     - uses: actions/checkout@v3
@@ -18,6 +20,15 @@ jobs:
       with:
         flutter-version: '3.16.0'
         channel: 'stable'
+        cache: true
+    
+    - name: Cache pub dependencies
+      uses: actions/cache@v3
+      with:
+        path: ${{ env.PUB_CACHE }}
+        key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pub-
     
     - name: Install dependencies
       run: flutter pub get
@@ -38,4 +49,6 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: release-apk
-        path: build/app/outputs/flutter-apk/app-release.apk
+        path: build/app/outputs/apk/release/app-release.apk
+        if-no-files-found: error
+        retention-days: 14
