--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,22 +1,8 @@
 name: holom_said
-description: "A new Flutter project."
-# The following line prevents the package from being accidentally published to
-# pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+description: "A new Flutter project"
+publish_to: 'none'
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number is used as CFBundleVersion.
-# Read more about iOS versioning at
-# https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-# In Windows, build-name is used as the major, minor, and patch parts
-# of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.0+1  # Format is version_name+version_code
 
 environment:
   sdk: ^3.6.1
@@ -60,6 +46,8 @@ dependencies:
   badges: ^3.1.2
   flutter_local_notifications: ^19.0.0
   permission_handler: ^11.2.0
+  device_info_plus: ^9.1.2
+  rename: ^3.1.0
 
 dev_dependencies:
   flutter_test:
@@ -85,6 +73,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - .env
     - assets/images/onboarding/
     - assets/images/
     - assets/logo/
