--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -36,7 +36,7 @@ android {
     defaultConfig {
         applicationId "org.holomsaid.elearning"
         minSdkVersion flutter.minSdkVersion
-        targetSdkVersion flutter.targetSdkVersion
+        targetSdkVersion 34
         versionCode flutter.versionCode
         versionName flutter.versionName
         multiDexEnabled true
@@ -59,8 +59,8 @@ android {
 
     dependencies {
         coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.1.4'
-        implementation 'com.google.android.play:core:1.10.3'
-        implementation 'com.google.android.play:core-ktx:1.8.1'
+        implementation 'com.google.android.play:app-update:2.1.0'
+        implementation 'com.google.android.play:app-update-ktx:2.1.0'
     }
 }
 
